--- a/game/index.html
+++ b/game/index.html
@@ -13,45 +13,16 @@
   </head>
   <body>
 
-    <script>
-    /*
-      AFRAME.registerComponent('', {
-        schema: {
-          default: ""
-        },
-
-        init: function () {
-
-        },
-
-        update: function () {
-
-        },
-
-        tick: function (t) {
-          //Possible needed variables
-          var object3D = this.el.object3D;
-          var camera = this.el.sceneEl.camera;
-          if (!camera) {return;}
-
-          var cameraPos = camera.getWorldPosition();
-          var thisPos = object3D.getWorldPosition();
-          var distance = Math.round(thisPos.distanceTo(cameraPos));
-        }
-      });
-    */
-    </script>
-
     <div hidden>
       <!--
-      Add some stuff
+      Add some stuff if needed
       -->
     </div>
 
     <ar-scene>
       <a-assets>
         <!--
-        Assets when we need them
+        Assets if needed
         -->
       </a-assets>
       <!-- lla should be placed at Tech Towers
@@ -59,6 +30,63 @@
 
       </ar-geopose>
       -->
+
+      <a-entity id="game" position="0 -1 -8">
+        <a-sphere position="0 1.25 -1" cursor-listener radius="1.25" color="#EF2D5E" ></a-sphere>>
+      </a-entity>
+
+      <ar-camera>
+        <a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
+                    position="0 0 -0.1"
+                    geometry="primitive: ring; radiusInner: 0.001; radiusOuter: 0.0015"
+                    material="color: #2E3A87; opacity:0.3;">
+        </a-entity>
+      </ar-camera>
+
+      <a-entity cursor raycaster="near: 0; far: 20; interval: 1000; objects: .clickable;"></a-entity>
+
     </ar-scene>
+
+    <script>
+      function getRandColor () {
+          var letters = '0123456789ABCDEF'.split('');
+          var color = '#';
+          for (var i = 0; i < 6; i++) {
+              color += letters[Math.floor(Math.random() * 16)];
+          }
+          return color;
+      }
+
+      // Component to change to random color on click.
+      // Possible useful functions - init, update, tick
+      AFRAME.registerComponent('cursor-listener', {
+        init: function () {
+          this.el.addEventListener('click', function (evt) {
+            this.setAttribute('material', 'color', getRandColor());
+            console.log('I was clicked at: ', evt.detail.intersection.point);
+          });
+          this.el.addEventListener('mouseenter', function (evt) {
+            this.setAttribute('material', 'opacity', 0.5);
+          });
+          this.el.addEventListener('mouseleave', function (evt) {
+            this.setAttribute('material', 'opacity', 1.0);
+          });
+        }
+      });
+
+      var arScene = document.querySelector('ar-scene');
+      var content = document.querySelector('#game');
+
+      // the ar-camera has an argon reference frame attached, so when it gets it's first value,
+      // we'll get this event
+      arScene.addEventListener("referenceframe-statuschanged", function () {
+        var camera = document.querySelector('ar-camera');
+        var vec = camera.object3D.getWorldDirection();
+        vec.multiplyScalar(-10);
+        vec.y -= 1;
+        content.setAttribute("position", {x: vec.x, y: vec.y, z: vec.z});
+      })
+    </script>
+
   </body>
 </html>
