Changing object to cube

--- a/game/index.html
+++ b/game/index.html
@@ -32,7 +32,7 @@
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-sphere position="0 1.25 -1" cursor-listener radius="1.25" color="#EF2D5E" ></a-sphere>>
+        <a-box position="-1 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#4CC3D9" ></a-box>
       </a-entity>
 
       <ar-camera>
