Forgot some semicolons

--- a/game/index.html
+++ b/game/index.html
@@ -35,7 +35,7 @@
       // Possible useful functions - init, update, tick
 
       // Color red
-      var color = "#FF0000"
+      var color = "#FF0000";
 
       AFRAME.registerComponent('cursor-listener', {
         init: function () {
@@ -56,7 +56,7 @@
         }
 
         update: function() {
-          var rot = this.el.getAttribute('rotation')
+          var rot = this.el.getAttribute('rotation');
           this.el.addEventListener('click', function (evt) {
 
             // Rotate on z-axis when clicked
