--- a/game/index.html
+++ b/game/index.html
@@ -35,7 +35,7 @@
       // Possible useful functions - init, update, tick
 
       // Color red
-      var color = "#FF0000"
+      var color = "#FF0000";
 
       AFRAME.registerComponent('cursor-listener', {
         init: function () {
@@ -53,24 +53,28 @@
           this.el.addEventListener('mouseleave', function (evt) {
             this.setAttribute('material', 'opacity', 1.0);
           });
-        }
+        },
 
         update: function() {
-          var rot = this.el.getAttribute('rotation')
+          var rot = this.el.getAttribute('rotation');
           this.el.addEventListener('click', function (evt) {
 
             // Rotate on z-axis when clicked
             if (rot.z < 90) {
               rot.z += 5;
             }
-            this.el.setAttribute("rotation", {x: rot.x, y: rot.y, z: rot.z});
+
+            this.setAttribute("rotation", {x: rot.x, y: rot.y, z: rot.z});
 
             // Delete after rotating 90
             if (rot.z > 90) {
               this.el.parentNode.removeChild(this.el);
             }
+
+          });
         }
-      });
+
+    });
 
       var arScene = document.querySelector('ar-scene');
       var content = document.querySelector('#game');
@@ -83,7 +87,9 @@
         vec.multiplyScalar(-10);
         vec.y -= 1;
         content.setAttribute("position", {x: vec.x, y: vec.y, z: vec.z});
-      })
+      });
+
+ 
     </script>
 
     <ar-scene>
@@ -99,17 +105,23 @@
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-box position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="##0000FF" ></a-box>
-        <a-box position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="##0000FF" ></a-box>
-        <a-box position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="##0000FF" ></a-box>
+        <a-box position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
+        <a-box position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
+        <a-box position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
       </a-entity>
 
       <ar-camera>
         <!-- Custom geometry must be created for crosshair -->
         <a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
                     position="0 0 -0.1"
-                    geometry="primitive: ring; radiusInner: 0.001; radiusOuter: 0.0015"
+                    geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
                     material="color: #2E3A87; opacity:0.3;">
+                    <a-animation begin="click" easing="ease-in" attribute="scale"
+                                 fill="backwards" from="0.5 0.5 0.5" to="1 1 1" dur="150">
+                    </a-animation>
+                    <a-animation begin="fusing" easing="ease-in" attribute="scale"
+                                 fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
+                    </a-animation>
         </a-entity>
       </ar-camera>
 
