--- a/game/index.html
+++ b/game/index.html
@@ -59,22 +59,20 @@
           var rot = this.el.getAttribute('rotation');
           this.el.addEventListener('click', function (evt) {
 
+            /*
             // Rotate on z-axis when clicked
             if (rot.z < 90) {
               rot.z += 5;
             }
-
             this.setAttribute("rotation", {x: rot.x, y: rot.y, z: rot.z});
+            */
 
-            // Delete after rotating 90
-            if (rot.z > 90) {
+            // Delete after rotating 90 backwards
+            if (rot.z == 270) {
               this.el.parentNode.removeChild(this.el);
             }
-
-          });
         }
-
-    });
+      });
 
       var arScene = document.querySelector('ar-scene');
       var content = document.querySelector('#game');
@@ -88,8 +86,6 @@
         vec.y -= 1;
         content.setAttribute("position", {x: vec.x, y: vec.y, z: vec.z});
       });
-
- 
     </script>
 
     <ar-scene>
@@ -98,30 +94,41 @@
         Assets if needed
         -->
       </a-assets>
-      <!-- lla should be placed at Tech Towers
+
+      <!-- This lla should be placed at Tech Towers
       <ar-geopose id="" lla="-84.394539 33.772501 320" userotation="false">
 
       </ar-geopose>
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-box position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
-        <a-box position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
-        <a-box position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" ></a-box>
+        <a-box position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
+          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
+        </a-box>
+
+        <a-box position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
+          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
+        </a-box>
+
+        <a-box position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
+          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
+        </a-box>
       </a-entity>
 
       <ar-camera>
         <!-- Custom geometry must be created for crosshair -->
-        <a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
+        <a-entity id="myCursor" cursor="fuse:false; fuse-timeout: 1000"
                     position="0 0 -0.1"
                     geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
                     material="color: #2E3A87; opacity:0.3;">
                     <a-animation begin="click" easing="ease-in" attribute="scale"
                                  fill="backwards" from="0.5 0.5 0.5" to="1 1 1" dur="150">
                     </a-animation>
+                    <!--
                     <a-animation begin="fusing" easing="ease-in" attribute="scale"
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
+                    -->
         </a-entity>
       </ar-camera>
 
