--- a/game/index.html
+++ b/game/index.html
@@ -24,9 +24,7 @@
 
     <ar-scene>
       <a-assets>
-        <!--
-        Assets if needed
-        -->
+        <audio id="gunshot" src="../resources/sounds/gunshot.mp3">
       </a-assets>
 
       <!-- This lla should be placed at Tech Towers
@@ -54,7 +52,8 @@
         <a-entity id="myCursor" cursor="fuse:false; fuse-timeout: 1000"
                     position="0 0 -0.1"
                     geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
-                    material="color: #2E3A87; opacity:0.3;">
+                    material="color: #2E3A87; opacity:0.3;"
+                    sound="src: #gunshot; on: click; poolSize: 3">
                     <a-animation begin="click" easing="ease-in" attribute="scale"
                                  fill="backwards" from="0.5 0.5 0.5" to="1 1 1" dur="150">
                     </a-animation>
