--- a/game/Test2.html
+++ b/game/Test2.html
@@ -38,23 +38,23 @@
        </ar-geopose> -->
 
        <ar-geopose id="GT" lla = test userotation="false">
-          <a-sphere position="0 2 -1" radius="100.25" color="#EF2D5E"></a-sphere>
+          <a-sphere position="0 2 -1" radius="100.25" color="red"></a-sphere>
        </ar-geopose>
        <!-- skiles -->
        <ar-geopose id="GT" lla= " -84.395410 33.773619 320" userotation="false">
-          <a-sphere position="0 2 -1" radius="100.25" color="#EF2D5E"></a-sphere>
+          <a-sphere position="0 2 -1" radius="100.25" color="yellow"></a-sphere>
        </ar-geopose>
        <!-- library -->
        <ar-geopose id="GT" lla= " -84.395396 33.774066 320" userotation="false">
-          <a-sphere position="0 2 -1" radius="100.25" color="#EF2D5E"></a-sphere>
+          <a-sphere position="0 2 -1" radius="100.25" color="black"></a-sphere>
        </ar-geopose>
        <!-- tech tower -->
        <ar-geopose id="GT" lla= " -84.394792 33.772587 320" userotation="false">
-          <a-sphere position="0 2 -1" radius="100.25" color="#EF2D5E"></a-sphere>
+          <a-sphere position="0 2 -1" radius="100.25" color="green"></a-sphere>
        </ar-geopose>
        <!-- student center -->
        <ar-geopose id="GT" lla= " -84.398769 33.773983 320" userotation="false">
-          <a-sphere position="0 2 -1" radius="100.25" color="#EF2D5E"></a-sphere>
+          <a-sphere position="0 2 -1" radius="100.25" color="blue"></a-sphere>
        </ar-geopose>
        <!-- culc -->
        <ar-geopose id="GT" lla= " -84.396372 33.775081 320" userotation="false">
