--- a/game/Test2.html
+++ b/game/Test2.html
@@ -20,8 +20,27 @@
     var studentCenter = false;
     var culc = false;
 
-    var test =  "33.777390,-84.408428";
-    var skilesPos = " -84.395410 33.773619 320";
+  function circleDistance(lon1, lat1, lon2, lat2) {
+       var R = 6371; // Radius of the earth in km
+       var dLat = (lat2-lat1).toRad();  // Javascript functions in radians
+       var dLon = (lon2-lon1).toRad();
+       var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+          Math.cos(lat1.toRad()) * Math.cos(lat2.toRad()) *
+          Math.sin(dLon/2) * Math.sin(dLon/2);
+       var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+       var d = R * c; // Distance in km
+       return d;
+}
+
+/** Converts numeric degrees to radians */
+if (typeof(Number.prototype.toRad) === "undefined") {
+  Number.prototype.toRad = function() {
+    return this * Math.PI / 180;
+  }
+}
+
+ 
+    var skilesPos = {longtitute: -84.395410, latitute:33.773619 320};
     var libraryPos = " -84.395396 33.774066 320";
     var techTowerPos = " -84.394792 33.772587 320";
     var studentCenterPos = " -84.398769 33.773983 320";
@@ -37,27 +56,27 @@
           <a-sphere position="0 2 -1" radius="1.25" color="#EF2D5E"></a-sphere>
        </ar-geopose> -->
 
-       <ar-geopose id="GT" lla = test userotation="false">
+      <!--  <ar-geopose id="GT" lla = test userotation="false">
           <a-sphere position="0 2 -1" radius="100.25" color="red"></a-sphere>
-       </ar-geopose>
+       </ar-geopose> -->
        <!-- skiles -->
-       <ar-geopose id="GT" lla= " -84.395410 33.773619 320" userotation="false">
+       <ar-geopose id="skiles" lla= "-84.395410 33.773619 320" userotation="false">
           <a-sphere position="0 2 -1" radius="100.25" color="yellow"></a-sphere>
        </ar-geopose>
        <!-- library -->
-       <ar-geopose id="GT" lla= " -84.395396 33.774066 320" userotation="false">
+       <ar-geopose id="library" lla= " -84.395396 33.774066 320" userotation="false">
           <a-sphere position="0 2 -1" radius="100.25" color="black"></a-sphere>
        </ar-geopose>
        <!-- tech tower -->
-       <ar-geopose id="GT" lla= " -84.394792 33.772587 320" userotation="false">
+       <ar-geopose id="Tower" lla= " -84.394792 33.772587 320" userotation="false">
           <a-sphere position="0 2 -1" radius="100.25" color="green"></a-sphere>
        </ar-geopose>
        <!-- student center -->
-       <ar-geopose id="GT" lla= " -84.398769 33.773983 320" userotation="false">
+       <ar-geopose id="SC" lla= " -84.398769 33.773983 320" userotation="false">
           <a-sphere position="0 2 -1" radius="100.25" color="blue"></a-sphere>
        </ar-geopose>
        <!-- culc -->
-       <ar-geopose id="GT" lla= " -84.396372 33.775081 320" userotation="false">
+       <ar-geopose id="CuLu" lla= " -84.396372 33.775081 320" userotation="false">
           <a-sphere position="0 2 -1" radius="10.25" color="#EF2D5E"></a-sphere>
        </ar-geopose>
 
