--- a/game/index.html
+++ b/game/index.html
@@ -22,6 +22,10 @@
 
     <script type="text/javascript">main();</script>
 
+    <div id="button">
+      <img id="bt" src="../../resources/images/button.png" width="100px" height="60px" onclick="playGunshot()">
+    </div>
+
     <ar-scene>
       <a-assets>
         <audio id="gunshot" src="../resources/sounds/gunshot.mp3">
@@ -34,17 +38,17 @@
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-box position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
-        </a-box>
+        <a-entity id="alien" position="0 0.5 1" alien rotation="0 0 0" width="1" height="1" depth="1">
+          <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation>
+        </a-entity>
 
-        <a-box position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
-        </a-box>
+        <a-entity id="alien" position="-5 0.5 1" alien rotation="0 0 0" width="1" height="1" depth="1">
+          <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation>
+        </a-entity>
 
-        <a-box position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation>
-        </a-box>
+        <a-entity id="alien" position="5 0.5 1" alien rotation="0 0 0" width="1" height="1" depth="1">
+          <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation>
+        </a-entity>
       </a-entity>
 
       <ar-camera>
@@ -52,8 +56,7 @@
         <a-entity id="myCursor" cursor="fuse:false; fuse-timeout: 1000"
                     position="0 0 -0.1"
                     geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
-                    material="color: #2E3A87; opacity:0.3;"
-                    sound="src: #gunshot; on: click; poolSize: 3">
+                    material="color: #2E3A87; opacity:0.3;">
                     <a-animation begin="click" easing="ease-in" attribute="scale"
                                  fill="backwards" from="0.5 0.5 0.5" to="1 1 1" dur="150">
                     </a-animation>
