Fixing image reference typo

--- a/game/index.html
+++ b/game/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript">main();</script>
 
     <div id="button">
-      <img id="bt" src="../../resources/images/button.png" width="100px" height="60px" onclick="playGunshot()">
+      <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot()">
     </div>
 
     <ar-scene>
