Trying to add button

--- a/game/index.html
+++ b/game/index.html
@@ -10,7 +10,7 @@
     <script src="../resources/js/aframe-look-at-component.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <link rel="stylesheet" href="../resources/css/font-awesome.min.css">
-	  <link rel="stylesheet" type="text/css" href="test.css">
+	  <link rel="stylesheet" type="text/css" href="../resources/style.css">
   </head>
   <body>
 
