Trying to fix button

--- a/game/index.html
+++ b/game/index.html
@@ -22,9 +22,9 @@
 
     <script type="text/javascript">main();</script>
 
-    <button id="shoot">
+    <div id="button">
       <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot();">
-    </button>
+    </div>
 
     <ar-scene>
       <a-assets>
