--- a/game/index.html
+++ b/game/index.html
@@ -22,8 +22,10 @@
 
     <script type="text/javascript">main();</script>
 
-    <div id="button">
-      <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot();">
+    <div id="gui" class="gui">
+      <div id="button">
+        <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot();">
+      </div>
     </div>
 
     <ar-scene>
