--- a/game/index.html
+++ b/game/index.html
@@ -24,7 +24,7 @@
 
     <div id="gui" class="gui">
       <div id="button">
-        <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot();">
+        <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot(); click()">
       </div>
     </div>
 
