--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -39,7 +39,7 @@
 
       <a-entity id="game" position="0 -1 -8">
         <a-box id="test01" position="0 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 0" repeat="0"></a-animation>
+          <!-- <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 0" repeat="0"></a-animation> -->
         </a-box>
 
         <a-box id="test02" position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
