--- a/game/index.html
+++ b/game/index.html
@@ -31,6 +31,7 @@
     <ar-scene>
       <a-assets>
         <audio id="gunshot" src="../resources/sounds/gunshot.mp3">
+        <img id="cursorImg" src="../resources/images/mouse.png">
       </a-assets>
 
       <!-- This lla should be placed at Tech Towers
@@ -67,6 +68,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
+                <a-image src="#cursorImg"></a-image>
         </a-entity>
       </ar-camera>
 
