--- a/game/index.html
+++ b/game/index.html
@@ -68,7 +68,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
-                <a-image src="#cursorImg"></a-image>
+                <a-image src="#cursorImg" width="1" height="0.25" opacity="0.75" position="0 1 -1.5"></a-image>
         </a-entity>
       </ar-camera>
 
