--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -29,6 +29,7 @@
     <a-scene>
       <a-assets>
         <audio id="gunshot" src="../../resources/sounds/gunshot.mp3">
+        <img id="cursorImg" src="../../resources/images/mouse.png">
       </a-assets>
 
       <!-- This lla should be placed at Tech Towers
@@ -65,6 +66,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
+                    <a-image src="#cursorImg" width="1" height="1" opacity="1" position="0 0 -1.5"></a-image>
         </a-entity>
 
         
