--- a/game/index.html
+++ b/game/index.html
@@ -24,7 +24,10 @@
 
     <div id="gui" class="gui">
       <div id="button">
-        <img id="bt" src="../resources/images/button.png" width="100px" height="60px" onclick="playGunshot(); click()">
+        <img id="bt" src="../resources/images/button.png" width="50px" height="100px" onclick="playGunshot(); click()">
+
+        <img id="reLoad" src="../resources/images/reload.png" width="70px" height="70px">
+
       </div>
     </div>
 
@@ -68,7 +71,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
-                <a-image src="#cursorImg" width="1" height="1" opacity="0.75" position="0 0 -1.5"></a-image>
+                <a-image src="#cursorImg" width="0.2" height="0.2" opacity="0.75" position="0 0 -1.5"></a-image>
         </a-entity>
       </ar-camera>
 
