--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -19,8 +19,10 @@
       <!--
       Add some stuff if needed
       -->
-      <div id="button" ><img id="bt" src="../../resources/images/button.png" width="100px" height="60px" onclick="toggle()">
-      <audio id="gunAudio" src="../../resources/sounds/gunshot.mp3" ></audio>
+      <div id="button" >
+         <img id="bt" src="../../resources/images/button.png" width="50px" height="120px" onclick="toggle()">
+         <img id="reLoad" src="../../resources/images/reload.png" width="80px" height="80px">
+         <audio id="gunAudio" src="../../resources/sounds/gunshot.mp3" ></audio>
 
     </div>
 
@@ -66,7 +68,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
-                    <a-image src="#cursorImg" width="1" height="1" opacity="1" position="0 0 -1.5"></a-image>
+                    <a-image src="#cursorImg" width="0.25" height="0.25" opacity="1" position="0 0 -1.5"></a-image>
         </a-entity>
 
         
