--- a/game/index.html
+++ b/game/index.html
@@ -35,6 +35,8 @@
       <a-assets>
         <audio id="gunshot" src="../resources/sounds/gunshot.mp3">
         <img id="cursorImg" src="../resources/images/mouse.png">
+        <a-asset-item id="alienModel" src="../resources/models/alien.dae"></a-asset-item>
+        
       </a-assets>
 
       <!-- This lla should be placed at Tech Towers
@@ -44,7 +46,7 @@
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-entity id="alien" position="0 0.5 1" alien-listener rotation="0 0 0" width="1" height="1" depth="1">
+        <a-entity collada-model="#alienModel" id="alien" position="0 0.5 1" alien-listener rotation="0 0 0" width="1" height="1" depth="1">
           <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation>
         </a-entity>
 
