--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -15,15 +15,17 @@
   </head>
   <body>
 
-    <div>
+    <div id="gui" class="gui">
       <!--
       Add some stuff if needed
       -->
-      <div id="button" >
-         <img id="bt" src="../../resources/images/button.png" width="50px" height="120px" onclick="toggle()">
-         <img id="reLoad" src="../../resources/images/reload.png" width="80px" height="80px">
-         <audio id="gunAudio" src="../../resources/sounds/gunshot.mp3" ></audio>
-
+        <div id="button" ><img id="bt" src="../../resources/images/button.png" width="50px" height="100px" onclick="toggle()"></div>
+        <audio id="gunAudio" src="../../resources/sounds/gunshot.mp3" ></audio>
+        <img id="reLoad" src="../../resources/images/reload.png" width="70px" height="70px">
+        <img id="score" src="../../resources/images/score-final.png" width="70px" height="140px">
+        <img id="bullet" src="../../resources/images/bullet-final.png" width="60px" height="140px">
+        <img id="bombTime" src="../../resources/images/bombtime-final.png" width="53px" height="140px">
+        <img id="alienNum" src="../../resources/images/aliennumber-final.png" width="60px" height="140px">
     </div>
 
     <script type="text/javascript">main();</script>
@@ -33,6 +35,10 @@
         <audio id="gunshot" src="../../resources/sounds/gunshot.mp3">
         <img id="cursorImg" src="../../resources/images/mouse.png">
         <a-asset-item id="alienModel" src="../../resources/models/alien.dae"></a-asset-item>
+        <a-asset-item id="alienModel" src="../../resources/models/alien02.dae"></a-asset-item>
+        <a-asset-item id="alienModel" src="../../resources/models/alien03.dae"></a-asset-item>
+        <a-asset-item id="alienModel" src="../../resources/models/bossAlien.dae"></a-asset-item>
+        <a-asset-item id="alienModel" src="../../resources/models/gun.dae"></a-asset-item> 
       </a-assets>
 
       <!-- This lla should be placed at Tech Towers
@@ -42,18 +48,18 @@
       -->
 
       <a-entity id="game" position="0 -1 -8">
-        <a-box id="test01" position="-1 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <!-- <a-entity collada-model="#alienModel" id="alien" position="0 0.5 1" alien-listener rotation="0 0 0" width="1" height="1" depth="1"> -->
-          <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation> 
-        </a-box>
+        
+        <a-entity collada-model="#alienModel" id="alien1" position="0 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+          <!--  <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation>  -->
+        </a-entity>
 
-        <a-box id="test02" position="-5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
-          <!-- <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation> -->
-        </a-box>
+        <a-entity collada-model="#alienModel" id="alien2" position="-5 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+           <!-- <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation> -->
+        </a-entity>
 
-        <a-box id="test03" position="5 0.5 1" cursor-listener rotation="0 0 0" width="1" height="1" depth="1"  color="#0000FF" >
+        <a-entity collada-model="#alienModel" id="alien3" position="5 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
          <!--  <a-animation attribute="rotation" begin="click" direction="normal" dur="3000" easing="ease-in" to="0 0 -90" repeat="0"></a-animation> -->
-        </a-box>
+        </a-entity>
       </a-entity>
 
       <a-camera>
@@ -70,7 +76,7 @@
                                  fill="forwards" from="1 1 1" to="0.5 0.5 0.5" dur="1500">
                     </a-animation>
                     -->
-                    <a-image src="#cursorImg" width="0.25" height="0.25" opacity="1" position="0 0 -1.5"></a-image>
+                    <a-image src="#cursorImg" scale="0.015 0.015 0.015" opacity="1"></a-image>
         </a-entity>
 
         
