update reload function

--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -23,7 +23,7 @@
 
         <div id="button" ><img id="bt" src="../../resources/images/button.png" width="50px" height="100px" onclick="playGunshot()"></div>
             
-        <img id="reLoad" src="../../resources/images/reload.png" width="70px" height="70px">
+        <img id="reLoad" src="../../resources/images/reload.png" width="70px" height="70px" onclick="reload()">
         
         <div id="scoreArea">0</div>
         <img id="score" src="../../resources/images/score-final.png" width="70px" height="140px">
