--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -61,12 +61,12 @@
 
       </ar-geopose>
       -->
-      <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
-  </a-assets>
-  <!-- Using the asset management system. -->
-  <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
-  <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+     <!--  <a-assets>
+         <video id="penguin-sledding" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+      </a-assets>
+  
+      <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video> -->
+  
 
 
       <a-entity id="game" position="0 -1 -8">     
