--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -22,7 +22,7 @@
         <audio id="gunAudio" src="../../resources/sounds/gunshot.mp3" ></audio>
         <audio id="reloadAudio" src="../../resources/sounds/reloadaudio.wav" ></audio>
         <audio id="gotPonitsAudio" src="../../resources/sounds/gotPonitsAudio.wav" ></audio>
-        <video id="myVideo" style="display: none;"></video>
+       <!--  <video id="myVideo" style="display: none;"></video> -->
         <button id="videoControl" onclick="pauseVid()" type="button" style="display: none;">Close</button>
         
 
@@ -63,15 +63,15 @@
       </ar-geopose>
       -->
       <a-assets>
-         <video id="averageending" autoplay src="../videos/averageending.mp4"></video>
-         <video id="badending" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="bestending" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="killbad1" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="killbad2" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="killgood1" autoplay src="../videos/killgood1.mp4"></video>
-         <video id="killgood2" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="killnomal1" autoplay src="../videos/killnormal1.mp4"></video>
-         <video id="killnormal2" autoplay src="../videos/killnormal1.mp4"></video>
+         <video id="averageending" autoplay loop="true"  src="../videos/averageending.mp4"></video>
+         <video id="badending" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="bestending" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="killbad1" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="killbad2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="killgood1" autoplay loop="true src="../videos/killgood1.mp4"></video>
+         <video id="killgood2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="killnomal1" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="killnormal2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
       </a-assets>
       
   
