--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -64,14 +64,14 @@
       -->
       <a-assets>
          <video id="averageending" autoplay loop="true"  src="../videos/averageending.mp4"></video>
-         <video id="badending" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="bestending" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="killbad1" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="killbad2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="killgood1" autoplay loop="true src="../videos/killgood1.mp4"></video>
-         <video id="killgood2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="killnomal1" autoplay loop="true src="../videos/killnormal1.mp4"></video>
-         <video id="killnormal2" autoplay loop="true src="../videos/killnormal1.mp4"></video>
+         <video id="badending" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="bestending" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killbad1" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killbad2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killgood1" autoplay loop="true" src="../videos/killgood1.mp4"></video>
+         <video id="killgood2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killnomal1" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killnormal2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
       </a-assets>
       
   
