--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Test Game</title>
+    <title>Game-AframeVersion</title>
     <meta name="description" content="Game">
     <!-- <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script> -->
     <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
@@ -64,14 +64,14 @@
       -->
       <a-assets>
          <video id="averageending" autoplay loop="true"  src="../videos/averageending.mp4"></video>
-         <video id="badending" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
-         <video id="bestending" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
-         <video id="killbad1" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
-         <video id="killbad2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="badending" autoplay loop="true" src="../videos/badending.mp4"></video>
+         <video id="bestending" autoplay loop="true" src="../videos/bestending.mp4"></video>
+         <video id="killbad1" autoplay loop="true" src="../videos/killbad1.mp4"></video>
+         <video id="killbad2" autoplay loop="true" src="../videos/killbad2.mp4"></video>
          <video id="killgood1" autoplay loop="true" src="../videos/killgood1.mp4"></video>
-         <video id="killgood2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killgood2" autoplay loop="true" src="../videos/killgood2.mp4"></video>
          <video id="killnomal1" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
-         <video id="killnormal2" autoplay loop="true" src="../videos/killnormal1.mp4"></video>
+         <video id="killnormal2" autoplay loop="true" src="../videos/killnormal2.mp4"></video>
       </a-assets>
       
   
