--- a/game/index.html
+++ b/game/index.html
@@ -72,7 +72,9 @@
 
       <a-entity id="game" position="0 -1 -8">
         <a-entity id ="videoContainer"></a-entity>
+      </a-entity>
 <!-- <<<<<<< HEAD -->
+      <ar-geopose id="Skiles" lla= " -84.395410 33.773619 320" userotation="false">
         <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
           <!-- <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation> -->
         </a-entity>
@@ -119,13 +121,17 @@
         <a-entity collada-model="#alienModel03" class="alien03" id="alien15" position="9 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
         </a-entity>
 
-      </a-entity>
+      </ar-geopose>
 
       <!-- Second Stage -->
-      <a-entity id="secondScene" position="-14 -1 -8"></a-entity>
+      <ar-geopose id="StudentCenter" lla= " -84.398769 33.773983 320" userotation="false">
+         <a-entity id="secondScene" position="-14 -1 -8"></a-entity>
+      </ar-geopose>
 
       <!-- Third Stage -->
-       <a-entity id="thirdScene" position="14 -1 -8" ></a-entity>
+      <ar-geopose id="TechTower" lla= "-84.394792 33.772587 320" userotation="false">
+          <a-entity id="thirdScene" position="14 -1 -8" ></a-entity>
+      </ar-geopose>
 
       <ar-camera>
         <!-- Custom geometry must be created for crosshair -->
