--- a/game/index.html
+++ b/game/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Game</title>
     <meta name="description" content="Game">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
     <script src="../resources/js/argon.min.js"></script>
     <script src="../build.js"></script>
@@ -75,7 +76,7 @@
       </a-entity>
 <!-- <<<<<<< HEAD -->
       <ar-geopose id="Skiles" lla= " -84.395410 33.773619 320" userotation="false">
-        <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
           <!-- <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation> -->
         </a-entity>
 
