--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -2,6 +2,7 @@
   <head>
     <title>Game-AframeVersion</title>
     <meta name="description" content="Game">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script> -->
     <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
     
