--- a/game/index.html
+++ b/game/index.html
@@ -126,8 +126,13 @@
 
       <!-- Second Stage -->
       <ar-geopose id="StudentCenter" lla= " -84.398769 33.773983 320" userotation="false">
-         <a-entity id="secondScene" position="-14 -1 -8"></a-entity>
       </ar-geopose>
+
+       <ar-geopose id="Culc" lla= " -84.396372 33.775081 320" userotation="false">
+       </ar-geopose>
+
+       <ar-geopose id="Library" lla= " -84.395396 33.774066 320" userotation="false">
+       </ar-geopose>
 
       <!-- Third Stage -->
       <ar-geopose id="TechTower" lla= "-84.394792 33.772587 320" userotation="false">
