--- a/game/index.html
+++ b/game/index.html
@@ -11,6 +11,8 @@
     <script src="../resources/js/aframe-look-at-component.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <link rel="stylesheet" href="../resources/css/font-awesome.min.css">
+    <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+    <script src="https://rawgit.com/protyze/aframe-alongpath-component/master/dist/aframe-alongpath-component.min.js"></script>
 	  <link rel="stylesheet" type="text/css" href="../resources/style.css">
   </head>
   <body>
@@ -54,11 +56,12 @@
         <a-asset-item id="gunModel" src="../resources/models/gun.dae"></a-asset-item>     
       </a-assets>
 
-      <!-- This lla should be placed at Tech Towers
-      <ar-geopose id="" lla="-84.394539 33.772501 320" userotation="false">
+    <a-curve id="track1">
+      <a-curve-point position="-2 2 -3"></a-curve-point>
+      <a-curve-point position="0 1 -3"></a-curve-point>
+      <a-curve-point position="2 2 -3"></a-curve-point>
+    </a-curve>
 
-      </ar-geopose>
-      -->
       <a-assets>
          <video id="averageending" autoplay loop="true"  src="videos/averageending.mp4"></video>
          <video id="badending" autoplay loop="true" src="videos/badending.mp4"></video>
@@ -75,21 +78,21 @@
         <a-entity id ="videoContainer"></a-entity>
       </a-entity>
 <!-- <<<<<<< HEAD -->
-      <ar-geopose id="Skiles" lla= "-84.395410 33.773619 320" userotation="false">
-        <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
+      <ar-geopose id="Skiles" lla= "-84.395410 33.773619 220" userotation="false">
+        <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">
           <!-- <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation> -->
         </a-entity>
 
-        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="1 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
+        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="1 0.5 2" alien-listener rotation="0 90 0" scale="10 10 10" alongpath="curve: #track1">
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien3" position="2 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
+        <a-entity collada-model="#alienModel" class="alien01" id="alien3" position="2 0.5 -1" alien-listener rotation="0 90 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien4" position="3 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">         
+        <a-entity collada-model="#alienModel" class="alien01" id="alien4" position="3 -0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien5" position="4 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">         
+        <a-entity collada-model="#alienModel" class="alien01" id="alien5" position="4 0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
         </a-entity>
 
         <a-entity collada-model="#alienModel02" class="alien02" id="alien6" position="-5 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
