--- a/game/index.html
+++ b/game/index.html
@@ -56,12 +56,6 @@
         <a-asset-item id="gunModel" src="../resources/models/gun.dae"></a-asset-item>     
       </a-assets>
 
-    <a-curve id="track1">
-      <a-curve-point position="-2 2 -3"></a-curve-point>
-      <a-curve-point position="0 1 -3"></a-curve-point>
-      <a-curve-point position="2 2 -3"></a-curve-point>
-    </a-curve>
-
       <a-assets>
          <video id="averageending" autoplay loop="true"  src="videos/averageending.mp4"></video>
          <video id="badending" autoplay loop="true" src="videos/badending.mp4"></video>
@@ -83,7 +77,7 @@
           <!-- <a-animation attribute="rotation" begin="alienDeath" direction="normal" dur="3000" easing="ease-in" from="0 0 0" to="270 0 0" repeat="0"></a-animation> -->
         </a-entity>
 
-        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="1 0.5 2" alien-listener rotation="0 90 0" scale="10 10 10" alongpath="curve: #track1">
+        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="1 0.5 2" alien-listener rotation="0 90 0" scale="10 10 10"  alongpath="path:0,0,0 -5,10,-20 -5,6,-15; closed:false; dur:2000; delay:2500; inspect:false">
         </a-entity>
 
         <a-entity collada-model="#alienModel" class="alien01" id="alien3" position="2 0.5 -1" alien-listener rotation="0 90 0" scale="10 10 10">
