--- a/game/index.html
+++ b/game/index.html
@@ -75,46 +75,47 @@
            <a-animation attribute="rotation" from="0 -330 0 " to="0 30 0 " repeat="1" dur="2200" fill ="both" easing ="ease-out"></a-animation>
         </a-entity>
 
-        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="1 0.5 2" alien-listener rotation="0 90 0" scale="10 10 10">
+        <a-entity collada-model="#alienModel" id="alien2" class="alien01" position="2 0.5 2" alien-listener rotation="0 90 0" scale="10 10 10">
+           <a-animation attribute="position" from="0.5 -0.8 0" to="0.5 1.2 -5" delay="500" dur="500" fill="both" easing="ease-out"></a-animation>
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien3" position="2 0.5 -1" alien-listener rotation="0 90 0" scale="10 10 10">
+        <a-entity collada-model="#alienModel" class="alien01" id="alien3" position="4 0.5 -1" alien-listener rotation="0 90 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien4" position="3 -0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
+        <a-entity collada-model="#alienModel" class="alien01" id="alien4" position="6 -0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
         </a-entity>
 
-        <a-entity collada-model="#alienModel" class="alien01" id="alien5" position="4 0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
+        <a-entity collada-model="#alienModel" class="alien01" id="alien5" position="8 0.5 1" alien-listener rotation="0 90 0" scale="10 10 10">         
         </a-entity>
 
-        <a-entity collada-model="#alienModel02" class="alien02" id="alien6" position="-5 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
+        <a-entity collada-model="#alienModel02" class="alien02" id="alien6" position="-10 1.5 -3" alien-listener rotation="0 0 0" scale="10 10 10">    
         </a-entity>
 
-        <a-entity collada-model="#alienModel02" class="alien02" id="alien7" position="-4 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
+        <a-entity collada-model="#alienModel02" class="alien02" id="alien7" position="-8 0.5 -6" alien-listener rotation="0 0 0" scale="10 10 10">    
         </a-entity>
 
-        <a-entity collada-model="#alienModel02" class="alien02" id="alien8" position="-3 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
+        <a-entity collada-model="#alienModel02" class="alien02" id="alien8" position="-6 -1.5 2" alien-listener rotation="0 0 0" scale="10 10 10">    
         </a-entity>
 
-        <a-entity collada-model="#alienModel02" class="alien02" id="alien9" position="-2 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
+        <a-entity collada-model="#alienModel02" class="alien02" id="alien9" position="-4 0.5 0" alien-listener rotation="0 0 0" scale="10 10 10">    
         </a-entity>
 
-        <a-entity collada-model="#alienModel02" class="alien02" id="alien10" position="-1 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">    
+        <a-entity collada-model="#alienModel02" class="alien02" id="alien10" position="-2 -0.5 -4" alien-listener rotation="0 0 0" scale="10 10 10">    
         </a-entity>
 
-        <a-entity collada-model="#alienModel03" class="alien03" id="alien11" position="5 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel03" class="alien03" id="alien11" position="5 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel03" class="alien03" id="alien12" position="6 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel03" class="alien03" id="alien12" position="10 0.5 1" alien-listener rotation="0 0 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel03" class="alien03" id="alien13" position="7 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel03" class="alien03" id="alien13" position="0 0.5 -2" alien-listener rotation="0 0 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel03" class="alien03" id="alien14" position="8 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel03" class="alien03" id="alien14" position="12 0.5 4" alien-listener rotation="0 0 0" scale="10 10 10">
         </a-entity>
 
-        <a-entity collada-model="#alienModel03" class="alien03" id="alien15" position="9 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">
+        <a-entity collada-model="#alienModel03" class="alien03" id="alien15" position="15 0.5 5" alien-listener rotation="0 0 0" scale="10 10 10">
         </a-entity>
 
       </ar-geopose>
@@ -145,7 +146,7 @@
                     </a-animation>
                     
                 <a-image src="#cursorImg" scale="0.01 0.01 0.01" opacity="0.75"></a-image>
-                <a-entity collada-model="#gunModel" position="-1 0 -1" rotation="145 50 -20" scale="4 4 4"></a-entity>
+                <a-entity collada-model="#gunModel" position="1 0 -1" rotation="145 50 -20" scale="4 4 4"></a-entity>
         </a-entity>
       </ar-camera>
 
