--- a/game/index.html
+++ b/game/index.html
@@ -55,15 +55,15 @@
       </a-assets>
 
       <a-assets>
-         <video id="averageending" autoplay loop="true"  src="videos/averageending.mp4"></video>
-         <video id="badending" autoplay loop="true" src="videos/badending.mp4"></video>
-         <video id="bestending" autoplay loop="true" src="videos/bestending.mp4"></video>
-         <video id="killbad1" autoplay loop="true" src="videos/killbad1.mp4"></video>
-         <video id="killbad2" autoplay loop="true" src="videos/killbad2.mp4"></video>
-         <video id="killgood1" autoplay loop="true" src="videos/killgood1.mp4"></video>
-         <video id="killgood2" autoplay loop="true" src="videos/killgood2.mp4"></video>
-         <video id="killnomal1" autoplay loop="true" src="videos/killnormal1.mp4"></video>
-         <video id="killnormal2" autoplay loop="true" src="videos/killnormal2.mp4"></video>
+         <video id="averageending" autoplay="true"  src="videos/averageending.mp4"></video>
+         <video id="badending" autoplay="true" src="videos/badending.mp4"></video>
+         <video id="bestending" autoplay="true" src="videos/bestending.mp4"></video>
+         <video id="killbad1" autoplay="true" src="videos/killbad1.mp4"></video>
+         <video id="killbad2" autoplay="true" src="videos/killbad2.mp4"></video>
+         <video id="killgood1" autoplay="true" src="videos/killgood1.mp4"></video>
+         <video id="killgood2" autoplay="true" src="videos/killgood2.mp4"></video>
+         <video id="killnomal1" autoplay="true" src="videos/killnormal1.mp4"></video>
+         <video id="killnormal2" autoplay="true" src="videos/killnormal2.mp4"></video>
       </a-assets>
 
       <a-entity id="game" position="0 -1 -8">
