--- a/game/index.html
+++ b/game/index.html
@@ -67,7 +67,10 @@
       </a-assets>
 
       <a-entity id="game" position="0 -1 -8">
-        <a-entity id ="videoContainer"></a-entity>
+        <a-entity id ="videoContainer">
+             <a-entity id="1" geometry="primitive: plane" position="-1 0.5 1" rotation="0 20 0" width="4" height="4">
+             </a-entity>
+        </a-entity>
       </a-entity>
 <!-- <<<<<<< HEAD -->
       <ar-geopose id="Skiles" lla= "-84.395410 33.773619 290" userotation="false">
